# Portal_project

./: CMakeLists.txt  Portal.cpp  Portal.h  README.md  camera.h  main.cpp  primitives.h
shaders/: camera.vert  floor.frag  portal.frag  portal.vert  scene.frag
